--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,48 +1,66 @@
-.navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1rem;
+  .navbar{
+    height: 15vh;
+    width: 100%;
+    background-color: white!important;
+    box-shadow: 5px 6px 30px -7px;
+    position: fixed;
+    top: 0;
+    left: 0; 
+    z-index: 1000;
   }
-  
+  .name-nav{
+    margin: 0!important;
+    font-size: 1.4rem;
+  }
   .profileImg {
     height: 50px;
     width: 50px;
     border-radius: 50%;
     object-fit: cover;
+    margin-left: 10px;
+    margin-right: 15px;
   }
   
-  .references {
-    color: #fff;
-    text-decoration: none;
-    margin-right: 1rem;
+  .nav-link{
+    font-weight: bold;
   }
-  
-  @media (max-width: 768px) {
-    .navbar {
-      flex-direction: column;
+  .nav-link:hover, .navbar-brand:hover{
+    color: rgb(120, 67, 233)!important;
+  }
+  .navbar-collapse{
+    display: flex;
+      justify-content: end!important;
+  }
+  @media (max-width: 991px) {
+    .navbar-collapse {
+      background-color: white;
+      width: 100%!important;
     }
-  
-    .w-50 {
+    .container-fluid{
+      --bs-gutter-x:0;
+    }
+    .navbar-toggler{
+      margin-right: 10px;
+    }
+    .navbar-nav{
       width: 100%;
     }
-  
-    .references {
-      display: none;
+    .navbar-collapse{
+      padding: 15px;
     }
-  
-    .navbar-menu {
-      display: flex;
-      flex-direction: column;
+    .navbar-collapse>ul>li{
+      border-bottom:solid 2px rgb(236, 236, 236) ;
     }
-  
-    .navbar-menu a {
-      margin: 0.5rem 0;
+    .nav-link{
+      text-align: end;
     }
-  
-    .hamburger {
-      display: block;
-      cursor: pointer;
-      color: #fff;
+  }
+
+  @media(max-width:427px){
+    .navbar{
+      height: 13vh;
+    }
+    .name-nav{
+      font-size: 1.7rem;
     }
   }
