--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -13,7 +13,10 @@
     margin-top: 2rem;
     text-align: justify;
 }
-
+.img-logo-projects{
+    width: 44px!important;
+    height: auto;
+}
 .container-ancord-project{
     width: 100%;
     display: flex;
