--- a/src/components/AboutMe/aboutme.css
+++ b/src/components/AboutMe/aboutme.css
@@ -22,6 +22,8 @@
         margin-top: 2.8rem;
     }
     .spam-me{ 
+        text-align: center;
+        margin-bottom: 1rem;
         width: 100%;
     }
 }
