cambio en importaciones
cambio en la forma de importar las imagenes en el componente de projectos

--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -33,6 +33,7 @@
     width: 100%;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 .div-container-logo>img{
     margin-right: 10px!important;
