--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -38,6 +38,9 @@
 .div-container-logo>img{
     margin-right: 10px!important;
 }
+.img-carrousel{
+    max-height: 590px;
+}
 @media(max-width:767px){
     .title-spam{
         font-size: 2.4rem;
@@ -64,6 +67,9 @@
        width: auto;
        margin-bottom: 1.2rem;
     }
+    .img-carrousel{
+        max-height: 44vh;
+    }
 }
 @media(max-width:660px){
     .carrousel-container{
@@ -71,11 +77,17 @@
         width: auto;
         margin-bottom: 1rem;
     }
+    .img-carrousel{
+        max-height: 35vh;
+    }
 }
 @media(max-width:580px){
     .carrousel-container{
         height: 30vh!important;
         margin-bottom: 1rem;
+    }
+    .img-carrousel{
+        max-height: 30vh;
     }
 }
 @media(max-width:480px){
@@ -83,5 +95,8 @@
         height: 25vh!important;
         width: auto;
         margin-bottom: 1rem;
+    }
+    .img-carrousel{
+        max-height: 25vh;
     }
 }
